--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 </div>
 
-            <a class="navbar-brand" href="https://ethandoescoding17.github.io/Tripeazium_Website_Project/"><img src="icons/Tripeazium-Logo.png" alt="Tripeazium" class="navbar-brand-logo" width="100rem" ></a>
+            <a class="navbar-brand" href="https://ethandoescoding17.github.io/Tripeazium_Website/"><img src="icons/Tripeazium-Logo.png" alt="Tripeazium" class="navbar-brand-logo" width="100rem" ></a>
         
             <div class="sub-container-fluid">
                 
